@@ -1,3 +1,9 @@
+2009-09-25  Eric Belanger  <eric@archlinux.org>
+
+	* fontforge 20090914-2
+	* Fixed problem with opening SVG fonts (close FS#16326)
+	* Fixed devicetables configure option
+
 2009-09-19  Eric Belanger  <eric@archlinux.org>
 
 	* fontforge 20090914-1
